# ISMIR-Jazzmus

./: .gitignore  Dockerfile  LICENSE  README.md  dat_to_txt.py  data_leak check.py  la_inference.py  predict.py  pyproject.toml  requirements.txt  ruff.toml  test_bbox_interactive.ipynb  test_yolo_bbox_detection.ipynb  train.py  train.sh
config/: char_lvl_tok.gin  character.gin  config.gin  crnn_config.gin  crnn_config.yaml  fosca_config.gin  fosca_config.yaml  fosca_config_pretrained.gin  fosca_config_pretrained_syn.gin  fosca_config_smallimage.gin  little_enc_char_lvl_tok.gin  medium.gin  pretrained_character.gin  pretrained_medium.gin  pretrained_syn_character.gin  pretrained_syn_medium.gin  pretrained_syn_word.gin  pretrained_word.gin  smt_config.yaml  syn_character.gin  syn_medium.gin  syn_word.gin  word.gin
jazzmus/: metrics.py  smt_trainer.py
jazzmus/dataset/: ctc_datamodule.py  ctc_dataset.py  data_preprocessing.py  (+7 more)
launch_scripts/: check_piece_metadata.py  commands.txt  create_splits.py  get_images_krn_mxl.py  gin_test.py  muret2json.py  prepare_hf_dataset.py  prepare_hf_dataset_YOLO.py  prepare_hf_dataset_og.py  prepare_hf_dataset_piece_level_split.py  prepare_hf_dataset_piece_split_paper.py  run_layout_analysis.py  test_bbox_single_image.py  test_synthetic_dataset.py  train.py  train.sh
notebooks/: build_splits.ipynb  dataset_statistics.ipynb  dataset_visualization.ipynb  final_data_cleaning.ipynb
utils/: ctc_datamodule.py  ctc_dataset.py  data_preprocessing.py  encoding_convertions.py  file_utils.py  hf_downloader.py  prepare_hf_dataset.py  seed.py
(+8 files in other folders)
